--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2061,6 +2061,9 @@ h1, h3, p {
     @media only screen and (max-width: 1200px) {
       .header_left .logo-name {
         font-size: 28px; } }
+    @media only screen and (max-width: 768px) {
+      .header_left .logo-name {
+        font-size: 22px; } }
   .header_left .lang-switch {
     display: -webkit-box;
     display: -webkit-flex;
@@ -2093,6 +2096,9 @@ h1, h3, p {
   font-size: 1.6rem;
   color: #590011;
   white-space: nowrap; }
+  @media only screen and (max-width: 768px) {
+    .transparent-button {
+      font-size: 1.4rem; } }
 
 .header_right {
   display: -webkit-box;
@@ -2123,7 +2129,7 @@ h1, h3, p {
     @media only screen and (max-width: 992px) {
       .header_right .phones {
         padding: 0 1.4rem; } }
-    .header_right .phones a {
+    .header_right .phones .phone-number {
       color: #FFE6E6;
       font-family: "opensans-light";
       line-height: 1.8;
@@ -2131,12 +2137,21 @@ h1, h3, p {
       -o-transition: all .3s linear;
       transition: all .3s linear; }
       @media only screen and (max-width: 1200px) {
-        .header_right .phones a {
+        .header_right .phones .phone-number {
           font-size: 1.6rem; } }
       @media only screen and (max-width: 992px) {
-        .header_right .phones a {
+        .header_right .phones .phone-number {
           color: #000;
           font-size: 1.4rem; } }
+      @media only screen and (max-width: 768px) {
+        .header_right .phones .phone-number {
+          display: none; } }
+    .header_right .phones .call-icon {
+      display: none; }
+      @media only screen and (max-width: 768px) {
+        .header_right .phones .call-icon {
+          color: #590011;
+          padding: 0 1rem; } }
 
 .main-button {
   background-color: #FFE6E6;
@@ -2150,6 +2165,10 @@ h1, h3, p {
     .main-button {
       padding: 1.3rem 2rem;
       min-width: 14rem; } }
+  @media only screen and (max-width: 768px) {
+    .main-button {
+      font-size: 1.4rem;
+      min-width: 10rem; } }
 
 .main-header.active {
   -webkit-transition: all .3s linear;
@@ -2161,7 +2180,7 @@ h1, h3, p {
     -webkit-transition: all .3s linear;
     -o-transition: all .3s linear;
     transition: all .3s linear; }
-  .main-header.active .phones a {
+  .main-header.active .phones .phone-number {
     color: #000;
     -webkit-transition: all .3s linear;
     -o-transition: all .3s linear;
@@ -2172,7 +2191,7 @@ h1, h3, p {
   left: 0;
   top: -webkit-calc(50vh - 68px);
   top: calc(50vh - 68px);
-  padding: 32px;
+  padding: 1.4rem;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2186,10 +2205,28 @@ h1, h3, p {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center; }
+  .socials-links a {
+    height: 40px;
+    width: 40px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
   @media only screen and (max-width: 992px) {
     .socials-links {
-      padding: 1.4rem;
+      padding: .8rem;
       font-size: 1.6rem; } }
+  @media only screen and (max-width: 768px) {
+    .socials-links {
+      padding: 0; } }
   .socials-links a {
     color: #590011; }
 
@@ -2218,6 +2255,10 @@ main {
       .main-section .main-section_left {
         padding: 12rem 2rem 6rem 6rem;
         width: 50%; } }
+    @media only screen and (max-width: 768px) {
+      .main-section .main-section_left {
+        width: 60%;
+        padding: 12rem 1rem 4rem 6rem; } }
     .main-section .main-section_left .top-info h1 {
       color: #590011;
       font-family: "vidaloka";
@@ -2242,7 +2283,11 @@ main {
       color: #590011;
       font-family: "opensans-bold";
       font-size: 1.8rem;
-      padding: 0; }
+      padding: 0;
+      text-align: left; }
+      @media only screen and (max-width: 768px) {
+        .main-section .main-section_left .top-info .buy-button {
+          font-size: 1.6rem; } }
     .main-section .main-section_left .bottom-info {
       display: -webkit-box;
       display: -webkit-flex;
@@ -2316,6 +2361,10 @@ main {
     @media only screen and (max-width: 992px) {
       .main-section .main-section_right {
         width: 50%; } }
+    @media only screen and (max-width: 768px) {
+      .main-section .main-section_right {
+        background-position: 26% 50%;
+        width: 40%; } }
     .main-section .main-section_right .main-signature {
       margin: 0;
       padding: 1.4rem;
@@ -2323,6 +2372,9 @@ main {
       color: #FFE6E6;
       font-size: 18px;
       line-height: 1.5; }
+      @media only screen and (max-width: 768px) {
+        .main-section .main-section_right .main-signature {
+          font-size: 14px; } }
 
 .default-info {
   color: rgba(0, 0, 0, 0.8);
@@ -2338,6 +2390,9 @@ main {
   @media only screen and (max-width: 992px) {
     .default-info {
       width: 100%; } }
+  @media only screen and (max-width: 768px) {
+    .default-info {
+      font-size: 1.6rem; } }
 
 .about-me {
   background-color: #fff;
@@ -2361,6 +2416,9 @@ main {
   @media only screen and (max-width: 992px) {
     .default-section_left {
       padding: 0 6rem 4rem; } }
+  @media only screen and (max-width: 768px) {
+    .default-section_left {
+      padding: 0 6rem 0; } }
 
 .default-section_right {
   padding: 0 10rem 4rem 1rem;
@@ -2383,6 +2441,10 @@ main {
     .default-head {
       font-size: 3rem;
       line-height: 1.4; } }
+  @media only screen and (max-width: 768px) {
+    .default-head {
+      padding: 1rem 0;
+      font-size: 2.4rem; } }
 
 .about-features {
   padding: 0 10rem 6rem;
@@ -2414,6 +2476,9 @@ main {
       -ms-flex-pack: center;
           justify-content: center;
   padding: .6rem; }
+  @media only screen and (max-width: 768px) {
+    .one-feature {
+      padding: .6rem 0; } }
   .one-feature p {
     color: #590011;
     font-family: "opensans-bold";
@@ -2439,6 +2504,9 @@ main {
             background-size: cover;
     background-blend-mode: multiply;
     background-position: top; }
+    @media only screen and (max-width: 768px) {
+      .top-appeals .top-appeals_left {
+        background-position: 60% 50%; } }
   .top-appeals .top-appeals_right {
     width: 60%;
     padding: 10rem 10rem 13rem; }
@@ -2468,12 +2536,23 @@ main {
   @media only screen and (max-width: 992px) {
     .subscribe-section {
       padding: 6rem; } }
+  @media only screen and (max-width: 768px) {
+    .subscribe-section {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
 
 .subscribe-section_left {
   width: 50%; }
   @media only screen and (max-width: 992px) {
     .subscribe-section_left {
       padding-right: .7rem; } }
+  @media only screen and (max-width: 768px) {
+    .subscribe-section_left {
+      width: 100%;
+      padding: 0; } }
 
 .subscribe-section_right {
   width: 50%;
@@ -2493,6 +2572,10 @@ main {
   @media only screen and (max-width: 992px) {
     .subscribe-section_right {
       padding-left: .7rem; } }
+  @media only screen and (max-width: 768px) {
+    .subscribe-section_right {
+      padding: 1rem 0 0;
+      width: 100%; } }
   .subscribe-section_right .buttons-wrap {
     width: 100%;
     padding-bottom: 6rem;
@@ -2504,6 +2587,10 @@ main {
     -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between; }
+    @media only screen and (max-width: 768px) {
+      .subscribe-section_right .buttons-wrap {
+        width: 76%;
+        padding-bottom: 0; } }
 
 .gallery-section {
   padding: 10rem;
@@ -2592,6 +2679,9 @@ main {
           .videofeedback-section .videofeedback-wrapper .videofeedback-row .onefeedback-wrapper {
             height: 300px;
             padding: 1.4rem 6rem; } }
+        @media only screen and (max-width: 768px) {
+          .videofeedback-section .videofeedback-wrapper .videofeedback-row .onefeedback-wrapper {
+            padding: 1.4rem 0; } }
         .videofeedback-section .videofeedback-wrapper .videofeedback-row .onefeedback-wrapper iframe {
           height: 100%;
           width: 100%;
@@ -2671,6 +2761,10 @@ footer {
   footer .default-info {
     color: #590011;
     padding: 6rem; }
+    @media only screen and (max-width: 768px) {
+      footer .default-info {
+        padding: 2rem 1.4rem;
+        font-size: 1.4rem; } }
   footer button {
     background: none;
     border: none;
@@ -2680,3 +2774,6 @@ footer {
     color: #590011;
     width: 100%;
     cursor: pointer; }
+    @media only screen and (max-width: 768px) {
+      footer button {
+        font-size: 1.4rem; } }
