--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -85,6 +85,8 @@ h1, h3, p
 		padding: 1.4rem 1.4rem 1.4rem 6rem
 	@include lg
 		padding: 1.4rem
+	//@include md
+	//	width: 40%
 	.logo-name
 		font-family: $logo-font
 		font-size: 54px
@@ -97,6 +99,8 @@ h1, h3, p
 			font-size: 36px
 		@include xl
 			font-size: 28px
+		@include md
+			font-size: 22px
 	.lang-switch
 		display: flex
 		@include lg
@@ -122,20 +126,23 @@ h1, h3, p
 	font-size: 1.6rem
 	color: $accent
 	white-space: nowrap
-
+	@include md
+		font-size: 1.4rem
 .header_right
 	display: flex
 	padding: 1.4rem
 	width: 50%
 	justify-content: flex-end
 	align-items: center
+	//@include md
+	//	width: 60%
 	.phones
 		display: flex
 		flex-direction: column
 		padding: 0 3.2rem
 		@include lg
 			padding: 0 1.4rem
-		a
+		.phone-number
 			color: $main-color
 			font-family: $default-font
 			line-height: 1.8
@@ -145,6 +152,14 @@ h1, h3, p
 			@include lg
 				color: #000
 				font-size: 1.4rem
+			@include md
+				display: none
+		.call-icon
+			display: none
+			@include md
+				//display: block
+				color: $accent
+				padding: 0 1rem
 .main-button
 	background-color: $main-color
 	padding: 2rem 4.6rem
@@ -156,6 +171,9 @@ h1, h3, p
 	@include xl
 		padding: 1.3rem 2rem
 		min-width: 14rem
+	@include md
+		font-size: 1.4rem
+		min-width: 10rem
 .main-header.active
 	transition: all .3s linear
 	background-color: rgba(255, 230, 230, .7)
@@ -164,7 +182,7 @@ h1, h3, p
 			display: block
 			transition: all .3s linear
 	.phones
-		a
+		.phone-number
 			color: #000
 			transition: all .3s linear
 
@@ -176,13 +194,21 @@ h1, h3, p
 	position: absolute
 	left: 0
 	top: calc(50vh - 68px)
-	padding: 32px
+	padding: 1.4rem
 	display: flex
 	flex-direction: column
 	align-items: center
+	a
+		height: 40px
+		width: 40px
+		display: flex
+		align-items: center
+		justify-content: center
 	@include lg
-		padding: 1.4rem
+		padding: .8rem
 		font-size: 1.6rem
+	@include md
+		padding: 0
 	a
 		color: $accent
 
@@ -206,6 +232,9 @@ main
 		@include lg
 			padding: 12rem 2rem 6rem 6rem
 			width: 50%
+		@include md
+			width: 60%
+			padding: 12rem 1rem 4rem 6rem
 		.top-info
 			//width: 80%
 			h1
@@ -222,6 +251,8 @@ main
 					font-size: 9rem
 				@include lg
 					font-size: 6rem
+				//@include md
+				//	font-size: 4.4rem
 			.buy-button
 				background: none
 				border: none
@@ -230,6 +261,9 @@ main
 				font-family: $items-font
 				font-size: 1.8rem
 				padding: 0
+				text-align: left
+				@include md
+					font-size: 1.6rem
 		.bottom-info
 			display: flex
 			flex-wrap: wrap
@@ -277,6 +311,9 @@ main
 			width: 40%
 		@include lg
 			width: 50%
+		@include md
+			background-position: 26% 50%
+			width: 40%
 		.main-signature
 			margin: 0
 			padding: 1.4rem
@@ -284,6 +321,8 @@ main
 			color: $main-color
 			font-size: 18px
 			line-height: 1.5
+			@include md
+				font-size: 14px
 .default-info
 	color: $default-text-color
 	margin: 0
@@ -295,6 +334,8 @@ main
 		width: 90%
 	@include lg
 		width: 100%
+	@include md
+		font-size: 1.6rem
 
 
 .about-me
@@ -309,6 +350,8 @@ main
 	padding: 0 0 4rem 10rem
 	@include lg
 		padding: 0 6rem 4rem
+	@include md
+		padding: 0 6rem 0
 .default-section_right
 	padding: 0 10rem 4rem 1rem
 	height: 300px
@@ -327,6 +370,9 @@ main
 	@include lg
 		font-size: 3rem
 		line-height: 1.4
+	@include md
+		padding: 1rem 0
+		font-size: 2.4rem
 .about-features
 	//background-color: $main-color
 	//padding: 3rem 10rem
@@ -343,6 +389,8 @@ main
 	align-items: center
 	justify-content: center
 	padding: .6rem
+	@include md
+		padding: .6rem 0
 	p
 		color: $accent
 		font-family: $items-font
@@ -366,6 +414,8 @@ main
 		background-size: cover
 		background-blend-mode: multiply
 		background-position: top
+		@include md
+			background-position: 60% 50%
 	.top-appeals_right
 		width: 60%
 		padding: 10rem 10rem 13rem
@@ -390,10 +440,15 @@ main
 		padding: 6rem 10rem
 	@include lg
 		padding: 6rem
+	@include md
+		flex-direction: column
 .subscribe-section_left
 	width: 50%
 	@include lg
 		padding-right: .7rem
+	@include md
+		width: 100%
+		padding: 0
 .subscribe-section_right
 	width: 50%
 	display: flex
@@ -402,12 +457,18 @@ main
 	justify-content: space-between
 	@include lg
 		padding-left: .7rem
+	@include md
+		padding: 1rem 0 0
+		width: 100%
 	.buttons-wrap
 		//padding-top: 10rem
 		width: 100%
 		padding-bottom: 6rem
 		display: flex
 		justify-content: space-between
+		@include md
+			width: 76%
+			padding-bottom: 0
 
 
 .gallery-section
@@ -481,6 +542,8 @@ main
 				@include lg
 					height: 300px
 					padding: 1.4rem 6rem
+				@include md
+					padding: 1.4rem 0
 				iframe
 					height: 100%
 					width: 100%
@@ -538,6 +601,9 @@ footer
 	.default-info
 		color: $accent
 		padding: 6rem
+		@include md
+			padding: 2rem 1.4rem
+			font-size: 1.4rem
 	button
 		background: none
 		border: none
@@ -547,3 +613,5 @@ footer
 		color: $accent
 		width: 100%
 		cursor: pointer
+		@include md
+			font-size: 1.4rem
